# autobot

./: .dockerignore  Dockerfile  pyproject.toml
auto_bot/: conf.py  db.py  main.py
